[gd_scene load_steps=4 format=3 uid="uid://dtrv575kt2ou6"]

[ext_resource type="Script" path="res://interaction/text_box.gd" id="1_ufc03"]
[ext_resource type="Texture2D" uid="uid://xgbobst56lrk" path="res://assets/ui/menu_button.png" id="2_bh1yp"]
[ext_resource type="FontFile" uid="uid://cxpsbmuap30yx" path="res://interaction/interaction area/PixelGameFont.ttf" id="3_fkboq"]

[node name="TextBox" type="MarginContainer"]
offset_right = 36.0
offset_bottom = 32.0
script = ExtResource("1_ufc03")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_bh1yp")
region_rect = Rect2(0, 0, 96, 32)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Control" type="Control" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/Control"]
position = Vector2(21, 39)

[node name="Control2" type="Control" parent="NinePatchRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_fkboq")
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
